new home layout and design

--- a/_includes/branch_sidebar.html
+++ b/_includes/branch_sidebar.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-stacked sidebar">
 	{% assign link=page.url | split: '/' %}
-	<li class="{% if link[2] == 'events' %}now{% endif %}"><a href="events.html">Events {{ link[2] }}</a></li>
+	<li class="{% if link[2] == 'events' %}now{% endif %}"><a href="events.html">Events</a></li>
 	<li class="{% if link[2] == 'faculties' %}now{% endif %}""><a href="faculties.html">Faculties</a></li>
 	<li class="{% if link[2] == 'time-table' %}now{% endif %}""><a href="time-table.html">Time Table</a></li>
 	<li class="{% if link[2] == 'clubs' %}now{% endif %}""><a href="clubs.html">Clubs</a></li>
