--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
 			<ul class="nav navbar-nav">
 				
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home<b class="caret"></b></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="{{ site.baseurl }}/about.html">About Us</a></li>
 						<li><a href="{{ site.baseurl }}/objectives.html">Objectives</a></li>
